Added error response functionality for inexistent icd/chop data. Other changes are open for discussion tomorrow. DO NOT MERGE!
	deleted:    app/models/api_formatter.rb
	new file:   app/models/api_response.rb
	modified:   app/models/information_interface.rb
	modified:   app/models/information_providers/database_info_provider.rb
	new file:   app/models/information_providers/provider_lookup_error.rb
	modified:   config/locales/de.yml
	modified:   config/locales/en.yml
	modified:   config/locales/fr.yml
	modified:   config/locales/it.yml

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -6,3 +6,6 @@ de:
   drg: "DRG"
   exclusiva: "Exklusiva"
   inclusiva: "Inklusiva"
+
+#errors
+  no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
