--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,3 +9,6 @@ en:
   drg: "DRG"
   exclusiva: "Exclusiva"
   inclusiva: "Inclusiva"
+
+#errors
+  no_icd_chop_data: "No ICD/CHOP data found for given code"
