--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,3 +6,6 @@ fr:
   drg: "DRG"
   exclusiva: "Exclusiva"
   inclusiva: "Inclusiva"
+
+#errors
+  no_icd_chop_data: "Someone with French skills please translate :-)"
