solve issue#126 add search button

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -6,6 +6,7 @@ de:
   drg: "DRG"
   exclusiva: "Exklusiva"
   inclusiva: "Inklusiva"
+  search: "Suchen"
 
 #errors
   no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
