Show subclasses. Fixes #132. Piece of cake.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -3,6 +3,7 @@ de:
   cat: "Fachrichtung"
   doc: "Doktor"
   super: "Oberklasse"
+  sub: "Unterklasse"
   drg: "DRG"
   exclusiva: "Exklusiva"
   inclusiva: "Inklusiva"
