--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
   cat: "Speciality"
   doc: "Doctor"
   super: "Superclass"
+  sub: "Subclass"
   drg: "DRG"
   exclusiva: "Exclusiva"
   inclusiva: "Inclusiva"
