--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -3,6 +3,7 @@ it:
   cat: "Branca"
   doc: "Dottore"
   super: "Ceto alto"
+  sub: "Ceto basso"
   drg: "DRG"
   exclusiva: "Exclusiva"
   inclusiva: "Inclusiva"
