fix overlapping of minmap and panels

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,6 +1,6 @@
 de:
   syn: "Synonyme"
-  cat: "Fachrichtung"
+  field: "Fachrichtung"
   doc: "Doktor"
   super: "Oberklasse"
   sub: "Unterklasse"
