side panels now completly hideable

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -11,6 +11,8 @@ de:
   legend: "Legende"
   location: "Ort"
   error: "Fehler"
+  show: "Zeige Informationen"
+  hide: "Verstecke Informationen"
 
 #errors
   no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
