Define console.log for IE7, fix wrong label for legend, fix legend translation

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -11,7 +11,7 @@ fr:
   legend: "Légende"
   location: "Lieu"
   error: "Erreur"
-  show: "Désigner informations"
+  show: "Montrer informations"
   hide: "Cacher informations"
 
 #errors
