--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -14,6 +14,7 @@ fr:
   reset: "Reculer"
   save: "Enregistrer"
   position: "Choisir position"
+  doc_help: "Médcins près de vous"
 
 #errors
   no_icd_chop_data: "Someone with French skills please translate :-)"
