--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -9,12 +9,14 @@ it:
   inclusiva: "Inclusiva"
   search: "Cercare"
   legend: "Leggenda"
-  location: "Luogo"
+  location: "Vostro luogo"
   error: "Errore"
   reset: "Resettare"
   save: "Salvare"
   position: "Selezionare posizione"
   doc_help: "Dottore bipedibapedi" #TODO Translate...
+  info_title: "Aiuto"
+  info_text:  "Klicken sie auf ein Fachgebiet, um Fachärzte in ihrer Umgebung zu finden." #TODO Translate...
 
 #errors
   no_icd_chop_data: "Nessuni dati ICD/CHOP trovati per codice"
