refactoring of css

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -9,7 +9,7 @@ de:
   inclusiva: "Inklusiva"
   search: "Suchen"
   legend: "Legende"
-  location: "Euer Ort"
+  location: "Ihr Ort"
   error: "Fehler"
   reset: "Löschen"
   save: "Speichern"
