Some small css changes.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -9,11 +9,11 @@ de:
   inclusiva: "Inklusiva"
   search: "Suchen"
   legend: "Legende"
-  location: "Ihr Ort"
+  location: "Ihr Standort"
   error: "Fehler"
   reset: "Löschen"
   save: "Speichern"
-  position: "Positionsauswahl"
+  position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
   doc_help: "Ärzte in ihrer Umgebung"
   info_title: "Hilfe"
   info_text:  "Klicken sie auf ein Fachgebiet, um Fachärzte in ihrer Umgebung zu finden. <br /> Um ihren Standort zu ändern, klicken sie auf die Adresse oben."
