--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -11,8 +11,8 @@ de:
   legend: "Legende"
   location: "Ihr Standort"
   error: "Fehler"
-  reset: "Löschen"
-  save: "Speichern"
+  reset: "Automatisch ermitteln"
+  save: "Übernehmen"
   position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
   doc_help: "Ärzte in ihrer Umgebung"
   info_title: "Hilfe"
