New position selection overlay. Fixes #264.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -11,8 +11,9 @@ de:
   legend: "Legende"
   location: "Ihr Standort"
   error: "Fehler"
-  reset: "Automatisch ermitteln"
-  save: "Übernehmen"
+  cancel: "Abbrechen"
+  auto: "Automatisch ermitteln"
+  save: "Speichern"
   position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
   doc_help: "Ärzte in ihrer Umgebung"
   info_title: "Hilfe"
