--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,3 +23,5 @@ en:
 
 #errors
   no_icd_chop_data: "No ICD/CHOP data found for given code"
+  request_not_chop_type: "Your request is not a CHOP code"
+  request_not_icd_type: "Your request is not an ICD code"
