Add crumb when clicking on related diagnosis (code in root node)
	modified:   app/assets/javascripts/orangeproton.mindmap.js
	modified:   config/locales/de.yml
	modified:   config/locales/en.yml
	modified:   config/locales/fr.yml
	modified:   config/locales/it.yml

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -18,7 +18,7 @@ de:
   doc_help: "Ärzte in ihrer Umgebung"
   info_title: "Hilfe"
   info_text:  "Klicken sie auf ein Fachgebiet, um Fachärzte in ihrer Umgebung zu finden. <br /> Um ihren Standort zu ändern, klicken sie auf die Adresse oben."
-
+  related: "Verwandte Diagnose"
 
 #errors
   no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
