Connected doctor fallback in frontend to backend (fixes #303), added remaining localisations (fixes #251).

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -19,6 +19,25 @@ de:
   info_title: "Hilfe"
   info_text:  "Klicken sie auf ein Fachgebiet, um Fachärzte in ihrer Umgebung zu finden. <br /> Um ihren Standort zu ändern, klicken sie auf die Adresse oben."
   related: "Verwandte Diagnose"
+  enter_icd_or_chop: "Geben Sie hier einen ICD- oder CHOP- Code ein"
+  choose_catalog: "Wählen Sie einen Katalog"
+  choose_mode: "Wählen Sie den Modus"
+  choose_language: "Wählen Sie die Sprache"
+  shows_help: "Zeigt Hilfe und Legende an"
+  change_loc: "Klicken Sie hier um Ihren Standort zu ändern"
+  show_fallback: "Zeige Ärzte für Fachgebiet"
+  doctors: "Ärzte"
+  info_hidden: "Es wurden Informationen versteckt"
+  center_map: "Karte zentrieren"
+  location_enter: "Geben Sie hier Ihren Standort ein."
+  location_search: "Klicken Sie hier um Ihren Standort zu suchen."
+  location_abort: "Klicken Sie hier um die Standortänderung abzubrechen."
+  location_confirm: "Klicken Sie hier um den Standort zu übernehmen."
+  location_auto: "Klicken Sie hier um Ihren Standort automatisch ermitteln zu lassen."
+  breadcrumb_root: "Ausgangspunkt"
+  breadcrumb_of: "von"
+  relevance: "Relevanz"
+  fallback_language: "Musste auf andere Sprache zurückfallen"
 
 #errors
   no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
