remove legend and help field, show panel only in dev mode. Also some css refactoring

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -16,8 +16,6 @@ de:
   save: "Speichern"
   position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
   doc_help: "Ärzte in ihrer Umgebung"
-  info_title: "Hilfe"
-  info_text:  "Klicken sie auf ein Fachgebiet, um Fachärzte in ihrer Umgebung zu finden. <br /> Um ihren Standort zu ändern, klicken sie auf die Adresse oben."
   related: "Verwandte Diagnose"
   enter_icd_or_chop: "Geben Sie hier einen ICD- oder CHOP- Code ein"
   choose_catalog: "Wählen Sie einen Katalog"
@@ -27,7 +25,7 @@ de:
   change_loc: "Klicken Sie hier um Ihren Standort zu ändern"
   show_fallback: "Zeige Ärzte für Fachgebiet"
   doctors: "Ärzte"
-  info_hidden: "Es wurden Informationen versteckt"
+  info_hidden: "Es konnten nicht alle Informationen angezeigt werden"
   center_map: "Karte zentrieren"
   location_enter: "Geben Sie hier Ihren Standort ein."
   location_search: "Klicken Sie hier um Ihren Standort zu suchen."
