namespace ALL the translations. Fixes #322

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,44 +1,54 @@
 de:
-  syn: "Synonyme"
-  field: "Fachrichtung"
-  doc: "Doktor"
-  super: "Oberklasse"
-  sub: "Unterklasse"
-  drg: "DRG"
-  exclusiva: "Exklusiva"
-  inclusiva: "Inklusiva"
-  search: "Suchen"
-  legend: "Legende"
-  location: "Ihr Standort"
-  error: "Fehler"
-  cancel: "Abbrechen"
-  auto: "Automatisch ermitteln"
-  save: "Speichern"
-  position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
-  doc_help: "Ärzte in ihrer Umgebung"
-  related: "Verwandte Diagnose"
-  enter_icd_or_chop: "Geben Sie hier einen ICD- oder CHOP- Code ein"
-  choose_catalog: "Wählen Sie einen Katalog"
-  choose_mode: "Wählen Sie den Modus"
-  choose_language: "Wählen Sie die Sprache"
-  shows_help: "Zeigt Hilfe und Legende an"
-  change_loc: "Klicken Sie hier um Ihren Standort zu ändern"
-  show_fallback: "Zeige Ärzte für Fachgebiet"
-  doctors: "Ärzte"
-  info_hidden: "Es konnten nicht alle Informationen angezeigt werden"
-  center_map: "Karte zentrieren"
-  location_enter: "Geben Sie hier Ihren Standort ein."
-  location_search: "Klicken Sie hier um Ihren Standort zu suchen."
-  location_center: "Klicken Sie hier um die Map-Ansicht zurück zu setzen."
-  location_abort: "Klicken Sie hier um die Standortänderung abzubrechen."
-  location_confirm: "Klicken Sie hier um den Standort zu übernehmen."
-  location_auto: "Klicken Sie hier um Ihren Standort automatisch ermitteln zu lassen."
-  breadcrumb_root: "Ausgangspunkt"
-  breadcrumb_of: "von"
-  relevance: "Relevanz"
-  fallback_language: "Musste auf andere Sprache zurückfallen"
+  mindmap:
+    relevance: "Relevanz"
+    doctors: "Ärzte"
+    type:
+      syn: "Synonyme"
+      field: "Fachrichtung"
+      doc: "Doktor"
+      super: "Oberklasse"
+      sub: "Unterklasse"
+      drg: "DRG"
+      exclusiva: "Exklusiva"
+      inclusiva: "Inklusiva"
 
-#errors
-  no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
-  request_not_chop_type: "Ihre Anfrage ist kein CHOP Code"
-  request_not_icd_type: "Ihre Anfrage ist kein ICD Code"
+  action:
+    search: "Suchen"
+    cancel: "Abbrechen"
+    auto: "Automatisch ermitteln"
+    save: "Speichern"
+    center_map: "Karte zentrieren"
+
+  help:
+    position: "Positionsauswahl - Marker klicken und ziehen zum ändern, oder eingeben"
+    tooltip:
+      enter_icd_or_chop: "Geben Sie hier einen ICD- oder CHOP- Code ein"
+      choose_catalog: "Wählen Sie einen Katalog"
+      choose_mode: "Wählen Sie den Modus"
+      choose_language: "Wählen Sie die Sprache"
+      shows_help: "Zeigt Hilfe und Legende an"
+      change_loc: "Klicken Sie hier um Ihren Standort zu ändern"
+      location:
+        enter: "Geben Sie hier Ihren Standort ein."
+        search: "Klicken Sie hier um Ihren Standort zu suchen."
+        center: "Klicken Sie hier um die Map-Ansicht zurück zu setzen."
+        abort: "Klicken Sie hier um die Standortänderung abzubrechen."
+        confirm: "Klicken Sie hier um den Standort zu übernehmen."
+        auto: "Klicken Sie hier um Ihren Standort automatisch ermitteln zu lassen."
+
+  info:
+    info_hidden: "Es konnten nicht alle Informationen angezeigt werden"
+    show_fallback: "Zeige Ärzte für Fachgebiet"
+    fallback_language: "Musste auf andere Sprache zurückfallen"
+    doc_help: "Ärzte in ihrer Umgebung"
+    location: "Ihr Standort"
+
+  breadcrumb:
+    root: "Ausgangspunkt"
+    of: "von"
+    related: "Verwandte Diagnose"
+
+  error:
+    no_icd_chop_data: "Keine ICD/CHOP Daten gefunden für gegebenen Code"
+    request_not_chop_type: "Ihre Anfrage ist kein CHOP Code"
+    request_not_icd_type: "Ihre Anfrage ist kein ICD Code"
